Use RB tree based collections